fix overlapping text

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,13 +12,20 @@
   background-color: yellow;
 }
 
+.option {
+  max-width: 40%;
+  width: 40%;
+  border: 1px solid gray;
+  padding: 10px;
+}
+
 .circle {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: rgb(41, 154, 156);
   position: absolute;
-  top: 50px;
+  top: calc(50% - 25px);
 }
 
 .main {
